fixed planet clipping into text

--- a/src/components/styles/planetDetails.css
+++ b/src/components/styles/planetDetails.css
@@ -1,10 +1,9 @@
 
 .planet-box{
   position: relative;
-  height: 100vh;
-  width: 100vh;
-  left: calc(25vw - 1000px);
-  
+  height: 95vh;
+  width: 100vw;
+  left: calc(25vw*.5 - 800px);
 }
 .planet-details-page{
   display: flex;
